polishing, adding spinners, tried to add progress indicator but failed
